--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,7 +1,16 @@
 
 .header {
-  text-align: center;
-  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
   color: var(--gray-100);
   background-color: var(--gray-800);
+  padding: 2rem 0;
+  font-size: 2.6rem;
+
+  img {
+    height: 3.2rem;
+  }
+
 }
