--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -3,7 +3,7 @@
   border-radius: 0.8rem;
   padding: 3.2rem;
 
-  header {
+  > header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -72,4 +72,64 @@
     flex-wrap: wrap;
     gap: 0.8rem;
   }
+}
+.commentForm {
+  display: flex;
+  flex-direction: column;
+
+  border-top: 1px solid var(--gray-600);
+  margin-top: 3.2rem;
+
+  &:focus-within footer{
+    visibility: visible;
+    max-height: none;
+  }
+
+  > strong {
+    line-height: 1.6;
+    color: var(--gray-100);
+    margin: 2.4rem 0 1.6rem 0;
+  }
+
+  > textarea {
+    background-color: var(--gray-900);
+    border: none;
+    border-radius: 0.8rem;
+    height: 9rem;
+    padding: 1.6rem;
+    line-height: 1.4;
+    resize: none;
+    color: var(--gray-100);
+    margin-bottom: 1.6rem;
+
+    &::placeholder {
+      color: var(--gray-400);
+    }
+
+  }
+
+  > footer{
+    visibility: hidden;
+    max-height: 0;
+
+    > button {
+      width: max-content;
+      padding: 1.6rem 2.4rem;
+      border-radius: 0.8rem;
+      border: none;
+      background-color: var(--green-500);
+      color: var(--white);
+      font-weight: 700;
+      margin-top: 1.6rem;
+      cursor: pointer;
+      transition: background-color 0.1s, color 0.1s;
+      
+      &:hover {
+        background-color: var(--green-300);
+      }
+    }
+  }
+}
+.commentList {
+  margin-top: 2.4rem;
 }
