--- a/src/global.css
+++ b/src/global.css
@@ -18,6 +18,11 @@
   --green-300: #00b37d;
   --green-500: #00875f;
   
+  --red-500: #F75A68;
+}
+:focus {
+  outline:transparent;
+  box-shadow: 0 0 0 2px var(--green-500);
 }
 
 body {
